# XTau

./: CMakeLists.txt  Makefile  Readme.md  build.sh  xinitrc
include/: EventHandlers.hpp  utils.hpp  window_manager.hpp
src/: CMakeLists.txt  main.c  main.cpp  utils.cpp  window_manager.cpp
src/EventHandlers/: CMakeLists.txt  OnConfigureRequest.cpp  OnCreateNotify.cpp  OnMapRequest.cpp  OnUnmapNotify.cpp
